<resources>
    <string name="app_name">Event Management System</string>
    <string name="action_settings">Settings</string>
    <string name="add_event">Add Event</string>
    <string name="todo">TODO</string>
    <string name="enter_event">Add an Event </string>
    <string name="enter_item">Enter Item</string>
    <string name="hintQty">Quantity</string>
    <string name="color">Color</string>
    <string name="size">Size</string>
    <string name="save">Save</string>
    <string name="add_item">Add Item</string>
    <string name="hint_item">Enter Item</string>
    <string name="hint_qty">Quantity</string>
    <string name="hint_color">Color</string>
    <string name="hint_size">Size</string>
    <string name="save_button">Save</string>
    <string name="sure_text">Are you sure?</string>
    <string name="no_text">no</string>
    <string name="yes_text">yes</string>
    <string name="edit_event">Edit Event</string>
    <string name="update_text">Update</string>
    <string name="event_title">Event Title</string>
    <string name="event_type">Event Type</string>
    <string name="venue">Venue</string>
    <string name="event_date">Event Date</string>
    <string name="starting_time">Starting Time</string>
    <string name="ending_time">Ending Time</string>
    <string name="description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="event_info">Event Information</string>
    <string name="title_activity_registration_list">Registration List</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="r_edit">  "Edit Registration Form"</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="r_info">Registration Information</string>
    <string name="enter_registration">Enter Registration</string>
    <string name="registration_title">Registration Title</string>
    <string name="registeration_fee_status">Registeration Fee Status</string>
    <string name="registration_name">Registration Name</string>
    <string name="roll_number">Roll Number</string>
    <string name="department">Department</string>
    <string name="contact">Contact</string>
    <string name="registration_fee_status">Registration Fee Status</string>
    <string name="title_activity_main_registration">MainRegistrationActivity</string>
    <string name="participant_info">Participant Information</string>
    <string name="participant_role">Participant Role</string>
    <string name="participant_name">Participant Name</string>
    <string name="participant_edit">Edit Participant</string>
    <string name="title_activity_participant_list">ParticipantListActivity</string>
</resources>