<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:padding="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/eTitle"
                    android:text="@string/enter_event"
                    android:textSize="18sp"
                    android:textStyle="italic"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/eventTitle"
                    android:layout_below="@+id/eTitle"
                    android:inputType="text"
                    android:hint="@string/event_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <EditText
                    android:id="@+id/eventType"
                    android:inputType="text"
                    android:layout_below="@+id/eventTitle"
                    android:hint="@string/event_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
                <EditText
                    android:id="@+id/eventVenue"
                    android:layout_below="@+id/eventType"
                    android:inputType="text"
                    android:hint="@string/venue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
                <EditText
                    android:id="@+id/eventDate"
                    android:layout_below="@+id/eventVenue"
                    android:inputType="date"
                    android:hint="@string/event_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

                <EditText
                    android:id="@+id/eventStime"
                    android:layout_below="@+id/eventDate"
                    android:inputType="time"
                    android:hint="@string/starting_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
                <EditText
                    android:id="@+id/eventEtime"
                    android:layout_below="@+id/eventStime"
                    android:inputType="time"
                    android:hint="@string/ending_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

                <EditText
                    android:id="@+id/eventDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/eventEtime"
                    android:hint="@string/description"
                    android:inputType="text" />

                <Button
                    android:id="@+id/saveButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/eventDescription"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="38dp"
                    android:layout_marginTop="24dp"
                    android:backgroundTint="@color/green"
                    android:text="@string/save"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/cancelButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/eventDescription"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="88dp"
                    android:backgroundTint="@color/green"
                    android:text="@string/cancel"
                    android:textStyle="bold" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>



</LinearLayout>