<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:padding="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/showPTitle"
                    android:text="Participant Details"
                    android:textSize="20sp"

                    android:textStyle="italic"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/showParticipantTitle"
                    android:layout_below="@+id/showPTitle"
                    android:inputType="text"
                    android:textSize="18sp"
                    android:padding="8dp"
                    android:hint="@string/participant_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/showParticipantRollNumber"
                    android:inputType="text"
                    android:textSize="18sp"
                    android:padding="8dp"
                    android:layout_below="@+id/showParticipantTitle"
                    android:hint="@string/roll_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:id="@+id/showParticipantDepartment"
                    android:layout_below="@+id/showParticipantRollNumber"
                    android:inputType="text"
                    android:textSize="18sp"
                    android:padding="8dp"
                    android:hint="@string/department"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:id="@+id/showParticipantContact"
                    android:layout_below="@+id/showParticipantDepartment"
                    android:inputType="text"
                    android:textSize="18sp"
                    android:padding="8dp"
                    android:hint="@string/contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

                <TextView
                    android:id="@+id/showParticipantRole"
                    android:layout_below="@+id/showParticipantContact"
                    android:inputType="text"
                    android:textSize="18sp"
                    android:padding="8dp"
                    android:hint="@string/participant_role"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />


                <Button
                    android:id="@+id/pBackButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/showParticipantRole"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="190dp"
                    android:layout_marginTop="24dp"
                    android:backgroundTint="@color/green"
                    android:text="@string/back"
                    android:textStyle="bold" />


            </RelativeLayout>
        </androidx.cardview.widget.CardView>




</LinearLayout>